<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qs_square_inactive"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/FragmentTitle"
        android:text="@string/identify_goal" />

    <!-- Q1 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question4" />
    <EditText
        android:id="@+id/editTextTextMultiLine3"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/specific_goal"/>

    <!-- Q2 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question5" />
    <EditText
        android:id="@+id/editTextTextMultiLine4"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/goal_importance"/>

    <!-- Q3 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question6" />
    <EditText
        android:id="@+id/editTextText4"
        style="@style/FragmentEditText"
        android:autofillHints=""
        android:hint="@string/ideal_timeline" />

    <!-- Q4 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question7" />
    <EditText
        android:id="@+id/editTextText5"
        style="@style/FragmentEditText"
        android:autofillHints=""
        android:hint="@string/time_per_day_week" />

    <!-- Q5 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question8" />
    <EditText
        android:id="@+id/editTextTextMultiLine5"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/obstacles_challenges" />

    <!-- Navigation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonToFragmentTwo_from3"
            style="@style/FragmentNavButton"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonToFragmentFour_from3"
            style="@style/FragmentNavButton"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>
