<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qs_square_inactive"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/FragmentTitle"
        android:text="@string/smart_fix" />

    <!-- Q1 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question9" />
    <EditText
        android:id="@+id/editTextTextMultiLine6"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/specific_goal_description" />

    <!-- Q2 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question10" />
    <EditText
        android:id="@+id/editTextTextMultiLine7"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/measurement_method" />

    <!-- Q3 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question11" />
    <EditText
        android:id="@+id/editTextText6"
        style="@style/FragmentEditText"
        android:autofillHints=""
        android:hint="@string/achievable_within_time_frame" />

    <!-- Q4 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question12" />
    <EditText
        android:id="@+id/editTextTextMultiLine8"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/relevant_to_long_term_plans" />

    <!-- Q5 -->
    <TextView
        style="@style/QuestionLabel"
        android:text="@string/Question13" />
    <EditText
        android:id="@+id/editTextTextMultiLine9"
        style="@style/FragmentEditTextBig"
        android:autofillHints=""
        android:hint="@string/realistic_timeline" />

    <!-- Navigation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonToFragmentThree_from4"
            style="@style/FragmentNavButton"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonToFragmentFive_from4"
            style="@style/FragmentNavButton"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>
