<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qs_square_inactive"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/FragmentTitle"
        android:text="@string/results" />

    <!-- Goal -->
    <TextView
        style="@style/CategoryLabel"
        android:text="@string/goal" />
    <TextView
        android:id="@+id/GoalContent"
        style="@style/FragmentBody" />

    <!-- Timeline -->
    <TextView
        style="@style/CategoryLabel"
        android:text="@string/timeline" />
    <TextView
        android:id="@+id/TimelineContent"
        style="@style/FragmentBody" />

    <!-- Actions -->
    <TextView
        style="@style/CategoryLabel"
        android:text="@string/actions" />
    <TextView
        android:id="@+id/ActionsContent"
        style="@style/FragmentBody" />

    <Button
        android:id="@+id/buttonFinish_from6"
        style="@style/FragmentButton"
        android:text="@string/home"
        android:layout_marginTop="15dp" />
</LinearLayout>
